# create-drf-app

./: .gitignore  LICENSE.md  README.md  pyproject.toml
create_drf_app/: main.py
create_drf_app/templates/basic/{{ cookiecutter.project_name }}/: .gitignore  manage.py  requirements.txt
create_drf_app/templates/basic/{{ cookiecutter.project_name }}/users/: admin.py  models.py  serializers.py  urls.py  views.py
create_drf_app/templates/basic/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: asgi.py  models.py  urls.py
create_drf_app/templates/basic/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/settings/: base.py  local.py  production.py
create_drf_app/templates/basic_template/{{ cookiecutter.project_name }}/: manage.py
create_drf_app/templates/basic_template/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: urls.py  wsgi.py
templates/basic_template/: cookiecutter.json
templates/basic_template/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: settings.py
