[tool.poetry]
name = "create-drf-app"
version = "0.1.4"
description = ""
authors = ["Mohammed Bajuaifer <mohamadbajuaifer@gmail.com>"]
readme = "README.md"
packages = [{include = "create_drf_app"}]

[tool.poetry.scripts]
create-drf-app = "create_drf_app.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
cookiecutter = "2.1.1"
click = "8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
